--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-share": "^4.4.1",
     "recharts": "^2.8.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
