--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scroll": "^1.8.9",
     "react-share": "^4.4.1",
     "recharts": "^2.8.0",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
