--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
