--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-quill": "^2.0.0",
+    "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
