--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
